Revert "edit login"
This reverts commit 0a09a19e3b04e7604eba43f8bcc85ed26b520aa5.

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat App - Login nasr jkzcbz zxjkc </title>
+    <title>Chat App - Login</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -91,7 +91,6 @@
     <div class="login-container">
         <div class="logo">ChatApp</div>
         <h1>Welcome Back</h1>
-         <h1>Welcome masr</h1>
         <div id="error" class="error"></div>
         <input type="text" id="username" placeholder="Username" required>
         <input type="password" id="password" placeholder="Password" required>
